KX_Light.color returns wrong values #41272

Closed
opened 2014-07-31 18:19:26 +02:00 by V. R. · 8 comments

System Information
unnecessary (Ubuntu 14.04)

Blender Version
Broken: 2.71 5e4a97d (2014-07-30), 2.71 release too

getting the color of a light object in the bge (KX_Light.color) returns [r, g, g] instead of [r, g, b].
This is probably caused by wrong indices in

PyObject *KX_LightObject::pyattr_get_color(void *self_v, const KX_PYATTRIBUTE_DEF *attrdef)

in /source/gameengine/Ketsji/KX_Light.cpp:

return Py_BuildValue("[fff]", self->m_lightobj->m_color[0], self->m_lightobj->m_color[1], self->m_lightobj->m_color[1]);

should be

return Py_BuildValue("[fff]", self->m_lightobj->m_color[0], self->m_lightobj->m_color[1], self->m_lightobj->m_color[2]);

lightcolor_bug.blend
(start and see console output)

**System Information** unnecessary (Ubuntu 14.04) **Blender Version** Broken: 2.71 5e4a97d (2014-07-30), 2.71 release too getting the color of a light object in the bge (KX_Light.color) returns [r, g, g] instead of [r, g, b]. This is probably caused by wrong indices in ``` PyObject *KX_LightObject::pyattr_get_color(void *self_v, const KX_PYATTRIBUTE_DEF *attrdef) ``` in /source/gameengine/Ketsji/KX_Light.cpp: ``` return Py_BuildValue("[fff]", self->m_lightobj->m_color[0], self->m_lightobj->m_color[1], self->m_lightobj->m_color[1]); ``` should be ``` return Py_BuildValue("[fff]", self->m_lightobj->m_color[0], self->m_lightobj->m_color[1], self->m_lightobj->m_color[2]); ``` [lightcolor_bug.blend](https://archive.blender.org/developer/F100737/lightcolor_bug.blend) (start and see console output)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rolle

Added subscriber: @rolle

Added subscribers: @brita, @Moguri

Added subscribers: @brita, @Moguri

@brita, this should be a quick fix if you're still looking for bugs to close. Otherwise, I'll try to load up my dev machine at some point to fix it.

@brita, this should be a quick fix if you're still looking for bugs to close. Otherwise, I'll try to load up my dev machine at some point to fix it.

This issue was referenced by a4c5570aba

This issue was referenced by a4c5570aba1374ad7c75b65b553810fabe57d931
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit a4c5570aba.

Closed by commit a4c5570aba.
Member

ah, the nicest bug report ever :) thanks rolle
I committed directly to master, it should be fixed on the next daily build.
@Moguri I am no longer looking up to the bug count, but thanks. I'll leave the game engine to focus on my thesis for now.

ah, the nicest bug report ever :) thanks rolle I committed directly to master, it should be fixed on the next daily build. @Moguri I am no longer looking up to the bug count, but thanks. I'll leave the game engine to focus on my thesis for now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41272
No description provided.