gameengine: fix T41272 - KX_Light.color returns wrong values